feat[UI]: calculator frontend UI

--- a/calculator.html
+++ b/calculator.html
@@ -1,38 +1,34 @@
 <html>
-<body>
+  <body>
     <head>
-        <title>calculator</title>
-        <link rel = "stylesheet" type = "text/css" href = "calculator.css">
-        <link rel = "" type = "text/js" href = "calculator.js">
+      <title>calculator</title>
+      <link rel="stylesheet" type="text/css" href="calculator.css" />
+      <link rel="" type="text/js" href="calculator.js" />
     </head>
-    <div id = "maincontainer">
-        <div class="resultcontent">
-            <input type="text" class="in" id="inputBox">
-        </div>
-        <div class="button_container">
-            <input type="button" value="1" id="button1" class="button1">
-            <input type="button" value="2" class="button1">
-            <input type="button" value="3" class="button1">
-            <input type="button" value="4" class="button1">
-            <input type="button" value="5" class="button1">
-            <input type="button" value="6" class="button1">
-            <input type="button" value="7" class="button1">
-            <input type="button" value="8" class="button1">
-            <input type="button" value="9" class="button1">
-            <input type="button" value="0" class="button1">
-            <input type="button" value="." class="button1">
-            <input type="button" value="*" class="button1">
-            <input type="button" value="+" class="button1">
-            <input type="button" value="-" class="button1">
-            <input type="button" value="/" class="button1">
-            
-        </div>
-        <div>    
-            <input type="button" value="Enter" class="button_enter">
-            <input type="button" value="=" class="button_equal">
-            <input type="button" value="Clear" class="button_clear">
-        </div>
+    <div id="maincontainer">
+      <div class="resultcontent">
+        <div id="inputBox"></div>
+        <input type="button" value="C" id="clearButton" />
+      </div>
+      <div class="button_container">
+        <input type="button" value="1" class="button" />
+        <input type="button" value="2" class="button" />
+        <input type="button" value="3" class="button" />
+        <input type="button" value="=" class="button" />
+        <input type="button" value="4" class="button" />
+        <input type="button" value="5" class="button" />
+        <input type="button" value="6" class="button" />
+        <input type="button" value="+" class="button" />
+        <input type="button" value="7" class="button" />
+        <input type="button" value="8" class="button" />
+        <input type="button" value="9" class="button" />
+        <input type="button" value="-" class="button" />
+        <input type="button" value="0" class="button" />
+        <input type="button" value="." class="button" />
+        <input type="button" value="*" class="button" />
+        <input type="button" value="/" class="button" />
+      </div>
     </div>
-</body>
-<script src='./calculator.js'></script>
+  </body>
+  <script src="./calculator.js"></script>
 </html>
