feat: add event listener for buttons

--- a/calculator.html
+++ b/calculator.html
@@ -11,20 +11,20 @@
         <input type="button" value="C" id="clearButton" />
       </div>
       <div class="button_container">
-        <input type="button" value="1" class="button" />
-        <input type="button" value="2" class="button" />
-        <input type="button" value="3" class="button" />
+        <input type="button" value="1" class="button num-value" />
+        <input type="button" value="2" class="button num-value" />
+        <input type="button" value="3" class="button num-value" />
         <input type="button" value="=" class="button" />
-        <input type="button" value="4" class="button" />
-        <input type="button" value="5" class="button" />
-        <input type="button" value="6" class="button" />
+        <input type="button" value="4" class="button num-value" />
+        <input type="button" value="5" class="button num-value" />
+        <input type="button" value="6" class="button num-value" />
         <input type="button" value="+" class="button" />
-        <input type="button" value="7" class="button" />
-        <input type="button" value="8" class="button" />
-        <input type="button" value="9" class="button" />
+        <input type="button" value="7" class="button num-value" />
+        <input type="button" value="8" class="button num-value" />
+        <input type="button" value="9" class="button num-value" />
         <input type="button" value="-" class="button" />
-        <input type="button" value="0" class="button" />
-        <input type="button" value="." class="button" />
+        <input type="button" value="0" class="button num-value" />
+        <input type="button" value="." class="button num-value" />
         <input type="button" value="*" class="button" />
         <input type="button" value="/" class="button" />
       </div>
