--- a/calculator.html
+++ b/calculator.html
@@ -14,19 +14,19 @@
         <input type="button" value="1" class="button num-value" />
         <input type="button" value="2" class="button num-value" />
         <input type="button" value="3" class="button num-value" />
-        <input type="button" value="=" class="button" />
+        <input type="button" value="=" class="button" id="equalId" />
         <input type="button" value="4" class="button num-value" />
         <input type="button" value="5" class="button num-value" />
         <input type="button" value="6" class="button num-value" />
-        <input type="button" value="+" class="button" />
+        <input type="button" value="+" class="button num-value" />
         <input type="button" value="7" class="button num-value" />
         <input type="button" value="8" class="button num-value" />
         <input type="button" value="9" class="button num-value" />
-        <input type="button" value="-" class="button" />
+        <input type="button" value="-" class="button num-value" />
         <input type="button" value="0" class="button num-value" />
         <input type="button" value="." class="button num-value" />
-        <input type="button" value="*" class="button" />
-        <input type="button" value="/" class="button" />
+        <input type="button" value="*" class="button num-value" />
+        <input type="button" value="/" class="button num-value" />
       </div>
     </div>
   </body>
